--- a/post01.html
+++ b/post01.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>dz</title>
+	<title>Сайт</title>
 </head>
 <body>
 <div class="menu">
 	
  <ul>
- <li><a href="./index.html">Головна</a></li>
- <li><a href="./foto.html">фото</a></li>
+<li><a href="./index.html"><h3>Головна</h3></a></li>
+ <li><a href="./foto.html"><h3>фото</h3></a></li>
+ <li><a href="./filims.html"><h3>Фільми</h3></a></li>
+ <li><a href="./video.html"><h3>Відео</h3></a></li>
  </ul>
 </div>
 <img src="./images/фото2.jpg">
