--- a/filims.html
+++ b/filims.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title></title>
+	<title>Сайт</title>
 </head>
 <body>
-<li><a href="./index.html">Головна</a></li>
- <li><a href="./foto.html">фото</a></li>
- <li><a href="./filims.html">Фільми</a></li>
- <li><a href="./video.html">Відео</a></li>
+	<div class="menu">
+<li><a href="./index.html"><h3>Головна</h3></a></li>
+ <li><a href="./foto.html"><h3>фото</h3></a></li>
+ <li><a href="./filims.html"><h3>Фільми</h3></a></li>
+ <li><a href="./video.html"><h3>Відео</h3></a></li>
+ </div>
  <h1>Фільми</h1>
  <ol>
  	<li>Пьяный мастер</li>
