--- a/video.html
+++ b/video.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>dz</title>
+	<title>Сайт</title>
 </head>
 <body>
 <div class="menu">
 	
  <ul>
- <li><a href="./index.html">Головна</a></li>
- <li><a href="./foto.html">фото</a></li>
- <li><a href="./filims.html">Фільми</a></li>
- <li><a href="./video.html">Відео</a></li>
+ <li><a href="./index.html"><h3>Головна</h3></a></li>
+ <li><a href="./foto.html"><h3>фото</h3></a></li>
+ <li><a href="./filims.html"><h3>Фільми</h3></a></li>
+ <li><a href="./video.html"><h3>Відео</h3></a></li>
  </ul>
 </div>
 <h1>Відео</h1>
@@ -19,5 +19,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/swpg-c3WCNE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7CNwoNVq_-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/POvj_z2o7BA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_iaThsea_fQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Z1PCtIaM_GQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
